# YAML-CONVECTOR-2.0

./: ALL_BUILD.vcxproj  C2H4-mechanism.yaml  CMakeCache.txt  CMakeLists.txt  CMakeLists_minimal.txt  CODE_VERIFICATION.md  CTestTestfile.cmake  ChemistryIO.cpp  ChemistryIO.h  ChemistryVars.cpp  ChemistryVars.h  DENSITY_ANALYSIS_RESULTS.txt  ENHANCED_SETSTATE_TPX_SUCCESS_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALL.vcxproj  INSTALL.vcxproj.filters  IdealGasPhase.cpp  IdealGasPhase.h  MechanismTest.cpp  MechanismTest.h  README_IdealGasPhase.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  YamlConvector2_IdealGas.sln  YamlConvector2_IdealGas_Minimal.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cantera_api_demo.cpp  cantera_compatibility_demo.cpp  cantera_demo.vcxproj  cantera_demo.vcxproj.filters  cleanup_minimal.ps1  cmake_install.cmake  comprehensive_demo.cpp  comprehensive_demo.vcxproj  comprehensive_demo.vcxproj.filters  demo_idealgas.cpp  demo_idealgas.vcxproj  demo_idealgas.vcxproj.filters  density_check.cpp  (+29 more)
Release/: idealgas_core.lib
cantera/equil/: ChemEquil.cpp
cantera_demo.dir/Release/: cantera_demo.exe.recipe
cantera_demo.dir/Release/cantera_demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
comprehensive_demo.dir/Debug/: comprehensive_demo.exe.recipe  comprehensive_demo.ilk  comprehensive_demo.vcxproj.FileListAbsolute.txt
comprehensive_demo.dir/Debug/comprehe.4B2532FA.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  comprehensive_demo.lastbuildstate  comprehensive_demo.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
comprehensive_demo.dir/Release/: comprehensive_demo.exe.recipe  comprehensive_demo.vcxproj.FileListAbsolute.txt
comprehensive_demo.dir/Release/comprehe.4B2532FA.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  comprehensive_demo.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
demo_idealgas.dir/Release/: demo_idealgas.exe.recipe
demo_idealgas.dir/Release/demo_idealgas.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
exact_cantera_test.dir/Release/: exact_cantera_test.exe.recipe
exact_cantera_test.dir/Release/exact_ca.C9F43937.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
idealgas_core.dir/Debug/idealgas_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  (+1 more)
idealgas_core.dir/Release/: idealgas_core.lib.recipe
integration_test.dir/Release/: integration_test.exe.recipe
simple_test.dir/Release/: simple_test.exe.recipe
test_enhanced_setState_TPX.dir/Release/: test_enhanced_setState_TPX.exe.recipe
x64/Debug/: vc143.idb  yaml-convector-2.0.exe.recipe  yaml-convector-2.0.vcxproj.FileListAbsolute.txt
x64/Release/: yaml-convector-2.0.exe.recipe  yaml-convector-2.0.iobj  yaml-convector-2.0.ipdb  yaml-convector-2.0.vcxproj.FileListAbsolute.txt
yaml_convector.dir/Debug/: yaml_convector.exe.recipe  yaml_convector.ilk  yaml_convector.vcxproj.FileListAbsolute.txt
yaml_convector.dir/Release/: yaml_convector.exe.recipe  yaml_convector.vcxproj.FileListAbsolute.txt
(+72 files in other folders)
